Fix overflow-x, etc

--- a/public/css/light-bootstrap-dashboard.css
+++ b/public/css/light-bootstrap-dashboard.css
@@ -52,6 +52,10 @@
 
 /*           Font Smoothing      */
 
+body{
+    overflow-x: hidden;
+}
+
 body,
 h1,
 .h1,
